force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/KimbleOne__ActivityExpenseCategory__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Activity Expense Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Expense Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>