force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__CostFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostFactor__c</fullName>
    <label>Reimbursement Factor</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>