force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__CostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostRate__c</fullName>
    <label>Reimbursement Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>