force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__ExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCategory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Category</label>
    <referenceTo>KimbleOne__ExpenseCategory__c</referenceTo>
    <relationshipLabel>Activity Expense Categories</relationshipLabel>
    <relationshipName>ActivityExpenseCategories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>