force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__InternalRebillingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalRebillingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Rebilling Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RebillingRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Activity Expense Categories (Internal Rebilling Rule)</relationshipLabel>
    <relationshipName>ActivityExpenseCategoriesIntRebillRule</relationshipName>
    <type>Lookup</type>
</CustomField>