force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__InvoicingCurrencyMaximumRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyMaximumRevenue__c</fullName>
    <label>Maximum Rebillable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>