force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__ReimbursementCurrencyCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReimbursementCurrencyCostRate__c</fullName>
    <label>Reimbursement Currency Cost Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>