force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__RevenueFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueFactor__c</fullName>
    <label>Rebilling Factor</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>