force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/fields/KimbleOne__RevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueRate__c</fullName>
    <label>Rebilling Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>