force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/validationRules/KimbleOne__CostFactorMandatoryForReimbursementRule.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__CostFactorMandatoryForReimbursementRule</fullName>
    <active>true</active>
    <description>Cost Factor is mandatory for Reimbursement Rule of Cost Factor</description>
    <errorConditionFormula>KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;CostFactor&apos;  &amp;&amp; ISBLANK(KimbleOne__CostFactor__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__CostFactor__c</errorDisplayField>
    <errorMessage>Cost Factor must be entered if Reimbursement Rule is &quot;Cost Factor&quot;</errorMessage>
</ValidationRule>