force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/validationRules/KimbleOne__CostRateMandatoryForReimbursementRule.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__CostRateMandatoryForReimbursementRule</fullName>
    <active>true</active>
    <description>Cost Rate is mandatory for Reimbursement Rule of Fixed Cost Rate or Cost Addition</description>
    <errorConditionFormula>(KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;FixedCostRate&apos;  || KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;CostAddition&apos;)  &amp;&amp; ISBLANK(KimbleOne__CostRate__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__CostRate__c</errorDisplayField>
    <errorMessage>Cost Rate must be entered if Reimbursement Rule is &quot;Fixed Cost Rate&quot; or &quot;Cost Addition&quot;</errorMessage>
</ValidationRule>