force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/validationRules/KimbleOne__LocationMandatoryForExpenseCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__LocationMandatoryForExpenseCategory</fullName>
    <active>true</active>
    <description>Location mandatory for Expense Categories which are variable by Location</description>
    <errorConditionFormula>KimbleOne__ExpenseCategory__r.KimbleOne__IsVariableByResourceLocation__c &amp;&amp; ISBLANK(KimbleOne__Location__c)</errorConditionFormula>
    <errorMessage>Location must be specified for Expense Categories which are variable by Location</errorMessage>
</ValidationRule>