force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/validationRules/KimbleOne__ResourceTypeMandatoryForExpenseCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ResourceTypeMandatoryForExpenseCategory</fullName>
    <active>true</active>
    <description>ResourceType mandatory for Expense Categories which are variable by ResourceType</description>
    <errorConditionFormula>KimbleOne__ExpenseCategory__r.KimbleOne__IsVariableByResourceType__c &amp;&amp; ISBLANK(KimbleOne__ResourceType__c)</errorConditionFormula>
    <errorMessage>Resource Type must be specified for Expense Categories which are variable by Resource Type</errorMessage>
</ValidationRule>