force-app/main/default/objects/KimbleOne__ActivityExpenseCategory__c/validationRules/KimbleOne__RevenueFactorMandatoryForRebillingRule.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__RevenueFactorMandatoryForRebillingRule</fullName>
    <active>true</active>
    <description>Revenue Factor is mandatory for Rebilling Rule of Revenue Factor</description>
    <errorConditionFormula>KimbleOne__RebillingRule__r.KimbleOne__Enum__c = &apos;RevenueFactor&apos;  &amp;&amp; ISBLANK(KimbleOne__RevenueFactor__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__RevenueFactor__c</errorDisplayField>
    <errorMessage>Revenue Factor must be entered if Rebilling Rule is &quot;Revenue Factor&quot;</errorMessage>
</ValidationRule>